src/test/deca/syntax/valid/multi_decl.deca

//Déclarations multiples sur une mm ligne

{
    int a, b, c ;
    a = 1 ;
    b = 2 ;
    c = a + b ;
    println(c) ;
}