src/test/deca/syntax/invalid/assign_literal.deca

// Description :
// Affectation sur un littéral (pas une LValue)
//
// Resultats :
// Erreur syntaxique

{
    1 = 2 ;
}